[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "powerpi-ups-gateway"
version = "0.1.2"
description = "Universal UPS protocol gateway for Raspberry Pi/Linux, initially exposing apcupsd state as APC-compatible SNMP."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ahsan Muhammad" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
pug = "pug.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pug = ["assets/ups-icons/*.png"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
